# hackathon-2025

./: BUILD_NOTES.md  Cargo.toml
assets/: main.css
doc/: TESTING.md
src/: compare_wiki.rs  create_wiki.rs  edit_wiki.rs  main.rs  utils.rs  view_wiki.rs
src/wiki/: link_parser.rs  mod.rs  page_store.rs  view.rs
wiki-web/: index.html  package-lock.json  package.json
wiki-web/src/: App.jsx
wiki-web/src/components/: AuthView.jsx  CreateWiki.jsx  EditWiki.jsx  ViewWiki.jsx  WikiList.jsx
wiky/: .gitignore  Cargo.toml  README.md  TAURI_SETUP.md
wiky/src-tauri/: Cargo.toml  tauri.conf.json
wiky/src-tauri/src/: lib.rs  main.rs  utils.rs
wiky/ui/: app.js  index.html  styles.css
