[package]
name = "pubky-wiki"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
dioxus = "0.5.6"
dioxus-desktop = "0.5.6"
dioxus-web = "0.5.6"
dioxus-logger = "0.5"
image = "0.25"
log = "0.4"
markdown = "1.0.0-alpha.21"
qrcode = "0.14"
pubky = "0.6.0-rc.6"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
