[package]
name = "pubky-wiki"
version = "0.1.0"
edition = "2021"

[lib]
name = "pubky_wiki_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "pubky-wiki"
path = "src/main.rs"

[dependencies]
anyhow = "1"
image = "0.25"
log = "0.4"
qrcode = "0.14"
pubky = "0.6.0-rc.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["protocol-asset"] }
tokio = { version = "1", features = ["full"] }
tracing-subscriber = "0.3"
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"

[build-dependencies]
tauri-build = { version = "2", features = [] }
